# SFML-game-AI

./: .clinerules  .gitignore  CMakeLists.txt  README.md  dev-journal.md
mcp-servers/: pyproject.toml
mcp-servers/git_ops/: server.py
mcp-servers/image-gen/: README.md  server_ga.py  server_hf.py
mcp-servers/sound-gen/: README.md  server.py
memory-bank/: activeContext.md  productContext.md  progress.md  systemPatterns-core.md  systemPatterns-details.md  systemPatterns.md
src/: Config.hpp  Game.cpp  Game.hpp  main.cpp
src/ecs/: Component.hpp  ComponentManager.hpp  Components.hpp  Entity.hpp  System.hpp
src/systems/: BulletCleanupSystem.cpp  BulletCleanupSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  EnemySpawnSystem.cpp  EnemySpawnSystem.hpp  ExplosionAnimationSystem.cpp  ExplosionAnimationSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PlayerMovementSystem.cpp  PlayerMovementSystem.hpp
